--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "preset",
   "description": "🌵 Babel 配置模块",
-  "author": "momoko <ko.momo@qq.com>",
+  "author": "komo <ko.momo@qq.com>",
   "license": "MIT",
   "private": false,
   "repository": {
     "type": "git",
-    "url": "https://github.com/wannaxiao/babel-preset"
+    "url": "https://github.com/komomoo/babel-preset"
   },
   "keywords": [
     "babel",
